--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@ gs show &lt;sha&gt;
 <a name="caution" class="anchor" href="#caution"><span class="octicon octicon-link"></span></a>Caution</h2>
 
 <p>Overides <code>gs</code> (Ghostscript) command on Linux.</p>
+
+<h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p>Released under the <a href="https://github.com/buren/git-story/blob/master/LICENSE">MIT License</a>.</p>
+
         </section>
 
         <aside id="sidebar">
