Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ If no merge conflicts; make a pull request <code>gs pull-request</code>. Otherwi
 <li>
 <p>Fetch and merge</p>
 
-<pre><code>gs update
+<pre><code>gs pull
 </code></pre>
 
 <p>fetch and merge from remote.
