--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ GS_CHECKLIST_MESSAGE # (String)  Checklist string.                  Default: "1.
    switchto          # Switch from current branch to specified branch (alias: branch, goto)
    diff              # List status and uncomitted changes
    pull-request      # Open current git repository on Github (alias: open, github)
+   package           # Package the project. Runs GS_PACKAGE (alias: build)
    history           # List repository commits (alias: repo-history)
    show              # Show last or specified commit (alias: last)
    status            # Shows the current git status
@@ -126,6 +127,7 @@ gs dev &lt;branch_name&gt; &lt;base_branch&gt;
 </code></pre>
 
 <p>this will create a new branch  based of master or specified . If the branch exists on remote pull the latest changes. Ensures the uniqueness of branch name at remote. Pushes the newly created branch to remote.
+If --force is supplied as the second argument no checks will be made.
 Alias: <code>feature</code></p>
 </li>
 <li>
@@ -158,7 +160,10 @@ Alias: <code>release</code></p>
 Example: If the current branch is "test_feature" the command will try to fetch and merge the remote version of test_feature.</p>
 </li>
 <li>
-<code>gs pull-request</code> opens the repository on GitHub. Alias: <code>open</code>, <code>github</code>
+<code>gs pull-request</code> opens the repository on GitHub. Alias: <code>open</code>, <code>github</code>. Runs <code>GS_PRE_COMMIT_HOOK</code>
+</li>
+<li>
+<code>gs package</code> Package the project. Runs <code>GS_PACKAGE</code>. Alias: <code>build</code>
 </li>
 <li>
 <code>gs where</code> prints all branches and marks the current one with a *. Alias: <code>branches</code>
@@ -207,7 +212,7 @@ Alias: <code>statistics</code></p>
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>Released under the <a href="https://github.com/buren/git-story/blob/master/LICENSE">MIT License</a>.</p>
+<p>git-story is released under the <a href="https://github.com/buren/git-story/blob/master/LICENSE">MIT License</a>.</p>
         </section>
 
         <aside id="sidebar">
