Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Git-story by buren</title>
+    <title>git-story by buren</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Git-story</h1>
+        <h1>git-story</h1>
         <h2>Simplified git workflow.</h2>
         <a href="https://github.com/buren/git-story" class="button"><small>View project on</small>GitHub</a>
       </div>
