Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h2>
 
 <pre><code>git dev branch_name        # Sets up clean workspace based of remote master.
-git done "Commit message"  # Commit changes, update master and merge with repository.
+git done "Commit message"  # Commit changes, updates current and local branch.
 </code></pre>
 
 <p>Output <a href="http://showterm.io/238c04d003bfb22f1d91d">example</a> (video).</p>
