Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <ul>
 <li><a href="#install-git-story">Installation</a></li>
+<li><a href="#getting-started">Getting Started</a></li>
 <li><a href="#example">Example</a></li>
 <li><a href="#configuration">Configuration</a></li>
 <li><a href="#command-list">Command list</a></li>
@@ -64,7 +65,7 @@
 </li>
 <li>Save local changes and sync with remote <code>git done &lt;commit_message&gt;</code>
 </li>
-<li>If any conflicts fix them and <code>git done "Fixed merge conflicts in ..."</code>
+<li>If any conflicts fix them and run <code>git done "Fixed merge conflicts in ..."</code>
 </li>
 <li>Create a pull request on GitHub (or any other host)</li>
 </ol><p>The principle is that you develop each new feature in its on branch. Then when you're ready you push it and create a pull request.</p>
