Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ GS_GIT_STORY_EXT_BRANCH='master'    # Target branch git-story tool
 <li>The software is supplied “as is” and all use is at your own risk (see <a href="https://github.com/buren/git-story/blob/master/LICENSE">license</a>)</li>
 <li>
 <code>git branch-status</code> requires Ruby 1.8.7 or greater</li>
-<li>Tested on Linux/OSX using both zsh, bash and cygwin*, doesn't work with sh.</li>
+<li>Tested on Linux/OSX/Windows using both zsh, bash and cygwin*, doesn't work with sh.</li>
 <li>Almost everything works with cygwin except:
 
 <ul>
@@ -278,6 +278,7 @@ GS_GIT_STORY_EXT_BRANCH='master'    # Target branch git-story tool
 <code>git browse</code> does nothing (<code>xdg-open</code>/<code>open</code> not available)</li>
 </ul>
 </li>
+<li>Fork the repository and update the URL defined in <a href="https://github.com/buren/git-story/blob/master/setup/install#L2">setup/install</a> to install and use your own version of <em>git-story</em> </li>
 </ul><h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
