Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <h1>
-<a name="git-story-beta" class="anchor" href="#git-story-beta"><span class="octicon octicon-link"></span></a>git-story (beta)</h1>
+<a name="git-story" class="anchor" href="#git-story"><span class="octicon octicon-link"></span></a>git-story</h1>
 
 <p>Various extensions to git, documented below.</p>
 
@@ -177,6 +177,8 @@ will exit and print conflicted files if any merge conflicts are found.
 <code>git tag-release</code> create a new tagged release.</li>
 <li>
 <code>git rename-tag</code> rename an existing release.</li>
+<li>
+<code>git changelog</code> generate changelog from last tag.</li>
 </ul><h3>
 <a name="log-extensions" class="anchor" href="#log-extensions"><span class="octicon octicon-link"></span></a>Log extensions</h3>
 
